# trezor-xmr

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  kokko.c  kokko.h  log.h  terminal.c  terminal.h  trezor.cpp  trezor.h  trezorwallet.cpp  trezorwallet.h
client/hidapi/: CMakeLists.txt  README.txt
client/hidapi/libusb/: CMakeLists.txt
client/hidapi/mac/: CMakeLists.txt
client/hidapi/windows/: CMakeLists.txt
client/protobuf-c/: messages.pb-c.c  messages.pb-c.h  storage.pb-c.c  storage.pb-c.h  types.pb-c.c  types.pb-c.h
client/protobuf-c/google/protobuf/: descriptor.pb-c.c  descriptor.pb-c.h
client/protobuf-c/protobuf-c/: types.pb-c.c  types.pb-c.h
client/test/: CMakeLists.txt  crypto-xmr-test.c  kokko-test.c  random.c  test-data.h  test.cpp
client/tools/: CMakeLists.txt  trezorctl.cpp
mcu/: warnings.h
shared/: crypto-xmr.c  crypto-xmr.h  fe.c  fe.h  key_exchange.c  key_exchange.h  limits-xmr.h  sha512.h  stream.c  stream.h
shared/keccak/: KeccakF-1600-interface.h  KeccakF-1600-opt32.c  KeccakF-1600-reference32BI.c  KeccakNISTInterface.c  KeccakNISTInterface.h  KeccakSponge.c  keccak.c
